<resources>
    <string name="app_name">Garden Light</string>
    <string name="toLightsOff">Turn the lights on</string>
    <string name="toLightsOn">Turn the lights off</string>
    <string name="scan_devices">Scan devices</string>
    <string name="stop_device_discovery">Stop device discovery</string>
    <string name="preference_file_key">lights.garden.iot.bublik.cz.gardenlight.PREFERENCE_FILE_KEY</string>
    <string name="ip_address_default">raspberrypi</string>
    <string name="ip_address">ip_address</string>
    <string name="hostname">hostname</string>
    <string name="hostname_default"> </string>
    <string name="used_ip_address">Using IP address:</string>
    <string name="available_ips_on_network">Available IPs on network:</string>
</resources>
