<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lights.garden.iot.bublik.cz.gardenlight.MainActivity">


    <ImageView
        android:id="@+id/lightsImage"
        android:layout_width="147dp"
        android:layout_height="151dp"
        android:src="@drawable/unselected_image"
        />

    <ToggleButton
        android:id="@+id/toggleButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff="@string/toLightsOff"
        android:textOn="@string/toLightsOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/ipAdressessList"
        android:layout_width="0dp"
        android:layout_height="235dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/availableAddressesView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_devices"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/ipAdressessList"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/usedIpAddressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/used_ip_address"
        app:layout_constraintStart_toStartOf="@+id/toggleButtonId"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonId" />

    <TextView
        android:id="@+id/availableAddressesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/available_ips_on_network"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/ipAdressessList"
        app:layout_constraintTop_toBottomOf="@+id/lightsImage" />

    <TextView
        android:id="@+id/currentIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/usedIpAddressView"
        app:layout_constraintStart_toStartOf="@+id/usedIpAddressView" />
</android.support.constraint.ConstraintLayout>
